--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,53 +7,191 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="icon" href="../../favicon.ico">
 
-        <title>Grid Template for Bootstrap</title>
+        <title>Velocity Vessel Tracker</title>
 
-        <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Custom styles for this template -->
-        <link href="grid.css" rel="stylesheet">
+        <link href="css/core.css" rel="stylesheet">
+        <link href="css/theme.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-          <![endif]-->
+            <!--[if lt IE 9]>
+              <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+              <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+            <![endif]-->
     </head>
 
     <body>
         <div class="container">
             <div class="page-header">
-                <h1>Velocity Ship Tracker</h1>
-                <p class="lead">Lorem lorem</p>
-            </div>
-
-            <div role="tabpanel">
-                <!-- Nav tabs -->
-                <ul class="nav nav-tabs" role="tablist">
-                  <li role="presentation" class="active"><a href="#fleet-1" aria-controls="home" role="tab" data-toggle="tab">Fleet 1</a></li>
-              </ul>
-
-              <!-- Tab panes -->
-                <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="fleet-1">
-                        <div class="row">
-                            <div class="col-md-4 vessel-cardpanel panel-default" id="vessel-1-1">
-                              <div class="panel-heading">
-                                <h3 class="panel-title">Vessel Card</h3>
-                              </div>
-                              <div class="panel-body">
-                                Panel content
-                              </div>
-                            </div>
-                        </div>
+                 <div class="row">
+                    <div class="col-md-8">
+                        <h1>Velocity Vessel Tracker</h1>
+                        <p class="lead">Vessel tracker for velocity board game.</p>
+                    </div>
+                    <div class="col-md-4" id="turn-tracker">
+                        <button type="button" class="btn btn-default btn-primary">Advance game</button>
+                        <p>Set up one fleet per player then click 'Advance game' to begin.</p>
                     </div>
                 </div>
             </div>
 
-        </div> <!-- /container -->
+            <div role="tabpanel" class="row">
+                <div class="btn-group col-md-12" id="dataswitch" role="group">
+                    <button type="button" class="btn btn-default btn-info" id="dataswitch-attributes" 
+                    data-targetpaneltype="vessel-attributes">Attributes</button>
+                    <button type="button" class="btn btn-default" id="dataswitch-fitings"
+                    data-targetpaneltype="vessel-fittings">Fittings</button>
+                    <button type="button" class="btn btn-default" id="dataswitch-properties" 
+                    data-targetpaneltype="vessel-properties">Properties</button>
+                </div>
+                <div class="btn-group col-md-4 col-md-push-8" id="fleet-controls" role="group">
+                    <button type="button" class="btn btn-info" id="rename-fleet">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 
+                        Rename
+                    </button>
+                    <button type="button" class="btn btn-success" id="add-fleet">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 
+                        Add
+                    </button>
+                    <button type="button" class="btn btn-danger" id="delete-fleet">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+                        Delete
+                    </button>
+                </div>
+
+                <div class="md-hide">&nbsp</div>
+
+                <!-- Nav tabs -->
+                <div class="col-md-8 col-md-pull-4">
+                    <ul class="nav nav-tabs" role="tablist" id="fleet-tabs">
+                        <li role="presentation" class="active" id="fleet-1-tab"><a href="#fleet-1" role="tab" data-toggle="tab" 
+                        aria-controls="fleet-1">Fleet 1</a></li>
+                    </ul>
+                </div>
+
+              <!-- Tab panes -->
+                <div class="tab-content" style="clear:both;" id="fleet-list">
+                    <div role="tabpanel" class="tab-pane active fleet-panel" id="fleet-1">
+                        <div class="row vessel-list">
+                            <div class="col-md-4 vessel-cardpanel panel-default" id="vessel-1-1">
+                                <div class="panel-heading col-xs-11">
+                                    <h3 class="panel-title">
+                                        <span class="glyphicon glyphicon-remove remove-vessel pull-right" aria-hidden="true"></span>
+                                        <span class="vessel-name">&lt Vessel Name &gt</span>
+                                    </h3>
+
+                                </div>
+                                    
+
+                                <div class="panel-body vessel-attributes">
+                                    <table class="table">
+                                        <tr class="vessel-attribute-class">
+                                            <td>Class</td>
+                                            <td>
+                                                <select class="form-control">
+                                                    <option value=''> - </option>
+                                                    <option value='carrier'> Carrier </option>
+                                                    <option value='battleship'> Battleship </option>
+                                                    <option value='annihilator'> Annihilator </option>
+                                                    <option value='sentinel'> Sentinel </option>
+                                                    <option value='fighter'> Fighter </option>
+                                                </select>
+                                            </td>
+                                        </tr>
+                                        <tr class="vessel-attribute-minSpeed">
+                                            <td>Min. speed</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr class="vessel-attribute-maxSpeed">
+                                            <td>Max. speed</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr class="vessel-attribute-armor">
+                                            <td>Armor</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr class="vessel-attribute-agility">
+                                            <td>Agility</td>
+                                            <td></td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="panel-body vessel-fittings hidden">
+                                    <table class="table">
+                                        <tr class="vessel-fitting-fore">
+                                            <td>Fore</td>
+                                            <td>
+                                            </td>
+                                        </tr>
+                                        <tr class="vessel-fitting-port" >
+                                            <td>Port</td>
+                                            <td>
+                                            </td>
+                                        </tr>
+                                        <tr class="vessel-fitting-starboard">
+                                            <td>Starboard</td>
+                                            <td>
+                                            </td>
+                                        </tr>
+                                        <tr class="vessel-fitting-aft">
+                                            <td>Aft</td>
+                                            <td>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="panel-body vessel-properties hidden">
+                                    <table class="table">
+                                        <tr class="vessel-property-sqd-ldr">
+                                            <td>Squad Lead?</td>
+                                            <td>
+                                                <input type="checkbox" />
+                                            </td>
+                                        </tr>
+                                        <tr class="vessel-property-speed">
+                                            <td>Speed</td>
+                                            <td>
+                                                <input type="number" class="form-control" />
+                                            </td>
+                                        </tr>
+                                        <tr class="vessel-property-fighters">
+                                            <td>Docked Fighters</td>
+                                            <td>
+                                                <input type="number" class="form-control" />
+                                            </td>
+                                        </tr>
+                                        <tr class="vessel-property-armor">
+                                            <td>Armor</td>
+                                            <td>
+                                                <input type="number" class="form-control" />
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-4 vessel-cardpanel panel-default add-vessel">
+                                <button type="button" class="btn btn-default">
+                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 
+                                    Add vessel
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- /container -->
+
+        <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script-->
+        <script src="js/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/fleet.js"></script>
+        <script src="js/vessel.js"></script>
+        <script src="js/turntracker.js"></script>
+        <script>
+        $(function(){
+            fleetManager = new FleetManager();
+            turnTracker =  new TurnTracker();
+        });
+        </script>
     </body>
 </html>
