--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,8 @@
         <link href="css/core.css" rel="stylesheet">
         <link href="css/theme.css" rel="stylesheet">
 
+        <link href="slider/bootstrap-slider.min.css" rel="stylesheet">
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
             <!--[if lt IE 9]>
               <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -44,6 +46,8 @@
                     data-targetpaneltype="vessel-fittings">Fittings</button>
                     <button type="button" class="btn btn-default" id="dataswitch-properties" 
                     data-targetpaneltype="vessel-properties">Properties</button>
+                    <button type="button" class="btn btn-default hidden" id="dataswitch-turnTracker" 
+                    data-targetpaneltype="vessel-turnTracker">Turn Tracker</button>
                 </div>
                 <div class="btn-group col-md-4 col-md-push-8" id="fleet-controls" role="group">
                     <button type="button" class="btn btn-info" id="rename-fleet">
@@ -169,6 +173,21 @@
                                         </tr>
                                     </table>
                                 </div>
+                                <div class="panel-body vessel-turnTracker hidden">
+                                    <div class="move hidden">
+                                        <p>Use the slider to adjust vessel speed. On the board, adjust direction by up to <span class="move-angle">45</span> degrees left or right and move the vessel forwards by the <strong>new</strong> speed.</p>
+                                        <input class="speed-slider" type="text" data-slider-step="1"/>
+                                    </div>
+                                    <div class="refuel hidden">
+                                        <p>Refuel</p>
+                                    </div>
+                                    <div class="collide hidden">
+                                        <p>Collide</p>
+                                    </div>
+                                    <div class="combat hidden">
+                                        <p>Combat</p>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-md-4 vessel-cardpanel panel-default add-vessel">
                                 <button type="button" class="btn btn-default">
@@ -184,6 +203,7 @@
         <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script-->
         <script src="js/jquery.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="slider/bootstrap-slider.min.js"></script>
         <script src="js/fleet.js"></script>
         <script src="js/vessel.js"></script>
         <script src="js/turntracker.js"></script>
